After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754685 - Crashes when saving any OPUS file
Crashes when saving any OPUS file
Status: RESOLVED FIXED
Product: easytag
Classification: Other
Component: general
2.4.x
Other Linux
: Normal critical
: 2.2
Assigned To: EasyTAG maintainer(s)
EasyTAG maintainer(s)
: 757241 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-09-07 14:53 UTC by James Cowgill
Modified: 2015-10-28 11:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.06 KB, patch)
2015-09-07 14:53 UTC, James Cowgill
committed Details | Review

Description James Cowgill 2015-09-07 14:53:43 UTC
Created attachment 310828 [details] [review]
patch

As reported in Debian: https://bugs.debian.org/798234
The submitter of the above bug has provided a stack trace.

2.4.0 crashes when saving any OPUS file. It appears that the success case in the swicth which checks the return value of opus_tags_parse in src/tags/vcedit.c is missing. I've attached a small patch which adds the case and things seem to work again.
Comment 1 David King 2015-09-07 15:10:55 UTC
Review of attachment 310828 [details] [review]:

Thanks for the bug report. Pushed to master (and slightly modified) as commit a31b38c1c0fa9603ecf67b47ea622c59cf9eb2f5.
Comment 2 David King 2015-10-28 11:01:31 UTC
*** Bug 757241 has been marked as a duplicate of this bug. ***