Add missing case when calling opus_tags_parse()

The case for a "successful" return value was missing so saving an opus
file was always causing easytag to abort at the assertion in the default
case block.

https://bugzilla.gnome.org/show_bug.cgi?id=754685